--- a/gywm.html
+++ b/gywm.html
@@ -46,7 +46,7 @@
 </div>
 <div class="bg_search">
   <div class="width search">
-    <div class="fl">当前位置：<a href="index.html">首页</a> > <a href="" title="关于我们">关于我们</a></div>
+    <div class="fl">当前位置：<a href="index.html">首页</a> > <a href="" title="关于我们">关于我们--sds订单</a></div>
     <div class="clear"></div>
   </div>
 </div>
