--- a/a/zhilenghuanrehanguanpeijian/100.html
+++ b/a/zhilenghuanrehanguanpeijian/100.html
@@ -22,7 +22,7 @@
 
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>高效罐/压缩机管_我的网站</title>
+<title>高效罐/压缩机管_华严钢管</title>
 
 
   <!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
@@ -96,7 +96,7 @@
 
 				<!-- 首页 -->
 				<li class="active">
-					<a class="f_a" href="http://192.168.1.4:5200">首页 </a>
+					<a class="f_a" href="https://rw.hot123.top">首页 </a>
 					<div class="s_navbox">
 						<div class="s_a"></div>
 					</div>
@@ -203,7 +203,7 @@
 				<div class="m_f_a">
 
 					<!-- 首页 -->
-					<a href="http://192.168.1.4:5200">首页</a>
+					<a href="https://rw.hot123.top">首页</a>
 					<i class=""></i>
 				</div>
 				<div class="m_s_nav"></div>
@@ -333,7 +333,7 @@
 		<div class="blk plc">
 			<!-- HTML -->
 			<div class="p12-curmbs-1" navcrumbs="">
-				<b> 您的位置：</b><a href='http://192.168.1.4:5200/'>首页</a> > <a href='/a/yj-cpzx/'>产品中心</a> > <a href='/a/zhilenghuanrehanguanpeijian/'>制冷换热焊管配件</a> > 
+				<b> 您的位置：</b><a href='https://rw.hot123.top/'>首页</a> > <a href='/a/yj-cpzx/'>产品中心</a> > <a href='/a/zhilenghuanrehanguanpeijian/'>制冷换热焊管配件</a> > 
 			</div>
 		</div>
 		<div class="clear"></div>
