--- a/a/index/index.html
+++ b/a/index/index.html
@@ -93,7 +93,7 @@
 				</li> -->
 			
 
-			<li class=''>
+			<li class='active'>
 					<a class="f_a" href="/a/index/index.html">首页</a>
 						<div class="s_navbox">
 							<div class="s_a">
